
4.0.1 2022/10/xx
  - addUser.js - remove WARNING adding first user
  - addUser.js - --webauthonly now sets header auth flag
  - all - better console output sanitization
  - capture - offline pcap allows more outstanding packets based on maxPacketsInQueue
  - db.pl - Fixed some OpenSearch compatibility
  - db.pl - Fixed upgrading to 4.x with no _moloch_shared user

4.0.0 2022/10/11
  - BREAKING - Must be 3.3.0+ to upgrade to 4.x
  - BREAKING - systemd files auto installed, still need to enable
  - BREAKING - Move to roles for some permission checking,
               userAdmin role required to edit users
  - BREAKING - the version file lives in common directory now
  - BREAKING - new defaults maxFileSizeG=12, compressES=true
  - BREAKING - pcap compression is turned on by default, disable with simpleCompression=none
  - BREAKING - simpleGzipBlockSize renamed simpleCompressionBlockSize
  - BREAKING - right-click changed to value-actions in config
  - BREAKING - the userId search in history for admin nolonger adds the surrounding wildcards automatically
  - BREAKING - views & notifiers are now their own indices
  - release - cyberchef 9.46.5, node 16.16.0
  - release - systemd files are delivered with /opt/arkime path instead of setting at install time
  - release - CICD tests with OpenSearch
  - all - Support ES 8 & OpenSearch
  - all - check for missing users index or no users on startup
  - all - update code/docs to mention OpenSearch
  - addUser.js - new --roles option, --admin creates superAdmin user
  - capture - New ecsEventDataset setting
  - capture - save sessions not saving packets for across restarts
  - capture - afpacket rewrite, improve performance & less out of order packets
  - capture - fix quic crash
  - capture - make creating fields from config/parsers/wise/tagger use ES bulk call
  - capture/viewer - new outer fields replace gre fields (PR #1889)
  - capture/viewer - initial SLL2 support (issue #2002)
  - capture/viewer - zstd pcap compression